# vpn

./: .gitignore  AUDIT_FINDINGS.md  README.md  opencode.json  progress.md
.codebase-memory/: artifact.json  graph.db.zst
vpn-tunnel-enforcer/: IDEAS.md  README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
vpn-tunnel-enforcer/docs/: censorship-resilience-roadmap.md  multi-account-isolation-plan.md  traffic-observability-rfc.md  vless-quic-fallback-investigation.md
vpn-tunnel-enforcer/docs/censorship-resilience-phases/: README.md  phase-01-sing-box-upgrade.md  phase-02-dynamic-rule-sets.md  phase-03-protocol-coverage.md  phase-04-naive-ech.md  phase-05-hysteria2-advanced.md  phase-06-bootstrap-chaining.md  phase-07-amneziawg-spike.md  phase-08-core-adapter-mihomo.md
vpn-tunnel-enforcer/native/vpnte-etw-sidecar/: Cargo.toml
vpn-tunnel-enforcer/native/vpnte-etw-sidecar/src/: classify.rs  main.rs
vpn-tunnel-enforcer/resources/: README.md  geoip-ru.srs  vpnte-etw-sidecar.cmd  vpnte-etw-sidecar.ps1  vpnte-proxy.cmd  vpnte-proxy.ps1
vpn-tunnel-enforcer/scripts/: build-sidecar.mjs  test-vpn-profiles.mjs  verify-happ-unwrap.mjs
vpn-tunnel-enforcer/src/main/: appLogger.ts  appLoggerRotation.test.ts  autoPilot.ts  bootstrapRoute.test.ts  bootstrapRoute.ts  browserHardening.ts  competingTunDetector.ts  configManager.test.ts  configManager.ts  connectionHistory.test.ts  connectionHistory.ts  connectionPlanner.test.ts  connectionPlanner.ts  diagnosticsExport.ts  diagnosticsPreflight.test.ts  dnsProfiles.test.ts  i18n.ts  (+74 more)
(+70 files in other folders)
